prevent title text wrapping the media-caption
SRFCMSAL-1685

--- a/source/_patterns/20-molecules/media-caption/media-caption.scss
+++ b/source/_patterns/20-molecules/media-caption/media-caption.scss
@@ -33,6 +33,8 @@
   flex: 0 0 auto;
   font-family: $font-regular;
   letter-spacing: .5px;
+
+  @include breakLongWords();
 }
 
 .media-caption__description {
